<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/ВариантыМаршрутов"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/oneMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Первый5маршрут"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one5Touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startMapsActivity"
            android:text="@string/Карта"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "/>

        <Button
            android:id="@+id/oneChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startMain6Activity"
            android:text="@string/Выбратьмаршрут" />
    </LinearLayout>

    <TextView
        android:id="@+id/twoMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Второй5маршрут"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/two5Touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Карта"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "/>

        <Button
            android:id="@+id/twoChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Выбратьмаршрут"/>
    </LinearLayout>

    <TextView
        android:id="@+id/treeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Третий5маршрут"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/three5Touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Карта"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     " />

        <Button
            android:id="@+id/threeChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Выбратьмаршрут"/>
    </LinearLayout>

    <TextView
        android:id="@+id/fourMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Четвертый5маршрут"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four5Touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Карта"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "/>

        <Button
            android:id="@+id/fourChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Выбратьмаршрут"/>
    </LinearLayout>
</LinearLayout>